--- a/aula20.html
+++ b/aula20.html
@@ -32,7 +32,7 @@
 
             <pre>
                 <code>
-                    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+                    &lt;meta name="viewport" content="width=device-width, initial-scale=1.0"&gt;
                 </code>
             </pre>
 
