--- a/aula19.html
+++ b/aula19.html
@@ -312,7 +312,7 @@
 
             <pre>
                 <code>
-                    example {
+                    @keyframes example {
                         0% {color: red;}
                         25% {color: blue;}
                         50% {color: green;}
