--- a/aula25.html
+++ b/aula25.html
@@ -283,7 +283,7 @@
                     let usuario = {
                         nome: "Douglas",
                         sobrenome: "Mariano Valero",
-                        idade: 28;
+                        idade: 28
                     }
 
                     alert(usuario.nome);
