--- a/aula26.html
+++ b/aula26.html
@@ -376,7 +376,7 @@
 
             <h4>Fila preferêncial</h4>
 
-            <p>Escreva um script que pergunta ao usuário sua idade e se é uma pessoa com deficiência. Caso a pessoa tenha um deficiência ou seja tenha 60 anos ou mais, exiba uma mesagem "Senha preferêncial", caso contrário exiba uma mensagem "Senha comum".</p>
+            <p>Escreva um script que pergunta ao usuário sua idade e se é uma pessoa com deficiência. Caso a pessoa tenha um deficiência ou tenha 60 anos ou mais, exiba uma mesagem "Senha preferêncial", caso contrário exiba uma mensagem "Senha comum".</p>
 
             <h4>Contratando alguém com experiência</h4>
 
